# VirtualWorld_CPP

./: Antylopa.cpp  Antylopa.h  Barszcz_sosnowskiego.cpp  Barszcz_sosnowskiego.h  CMakeLists.txt  Czlowiek.cpp  Czlowiek.h  Gra.cpp  Gra.h  Guarana.cpp  Guarana.h  Lis.cpp  Lis.h  Mlecz.cpp  Mlecz.h  Organizm.cpp  Organizm.h  Owca.cpp  Owca.h  README.md  Roslina.cpp  Roslina.h  Swiat.cpp  Swiat.h  Trawa.cpp  Trawa.h  Wilcze_jagody.cpp  Wilcze_jagody.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h  Zwierze.cpp  Zwierze.h  main.cpp
