cmake_minimum_required(VERSION 3.27)
project(po_projekt1)

set(CMAKE_CXX_STANDARD 17)

add_executable(po_projekt1 main.cpp
        Swiat.cpp
        Swiat.h
        Gra.cpp
        Gra.h
        Organizm.cpp
        Organizm.h
        Roslina.cpp
        Roslina.h
        Zwierze.cpp
        Zwierze.h
        Wilk.cpp
        Wilk.h
        Owca.cpp
        Owca.h
        Lis.cpp
        Lis.h
        Zolw.cpp
        Zolw.h
        Antylopa.cpp
        Antylopa.h
        Trawa.cpp
        Trawa.h
        Mlecz.cpp
        Mlecz.h
        Guarana.cpp
        Guarana.h
        Wilcze_jagody.cpp
        Wilcze_jagody.h
        Barszcz_sosnowskiego.cpp
        Barszcz_sosnowskiego.h
        Czlowiek.cpp
        Czlowiek.h
)
